# vegas-cuda

./: CMakeLists.txt
cmake/: FindGSL.cmake
exp/: hilbert.c  par.c  pattern.c
include/: mc.h  system.h  system_cu.h  util.h
src/: main.c  main.cu  mc.c  system.c  util.c
